--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "naichalayga",
-    "slug": "naichalayga",
+    "name": "esportapp",
+    "slug": "esportapp",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
