--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-native": "0.64.3",
     "react-native-vector-icons": "^9.0.0",
     "react-native-web": "0.17.1",
+    "react-navigation-drawer": "^2.7.2",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
