--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "react-navigation": "^4.4.4",
     "react-navigation-drawer": "^2.7.2",
     "react-navigation-stack": "^2.10.4",
-    "uuid": "^8.3.2"
+    "uuid": "^8.3.2",
+    "expo-linear-gradient": "~11.0.3"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
