--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "react-navigation-drawer": "^2.7.2",
     "react-navigation-stack": "^2.10.4",
     "uuid": "^8.3.2",
-    "expo-linear-gradient": "~11.0.3"
+    "expo-linear-gradient": "~11.0.3",
+    "@react-native-picker/picker": "2.2.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
