--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@react-navigation/drawer": "^6.3.1",
     "@react-navigation/native": "^6.0.8",
+    "@react-navigation/stack": "^6.1.1",
     "expo": "~44.0.0",
     "expo-linear-gradient": "~11.0.3",
     "expo-status-bar": "~1.2.0",
