--- a/package.json
+++ b/package.json
@@ -10,13 +10,14 @@
     "eject": "expo eject"
   },
   "dependencies": {
-    "@react-native-picker/picker": "^2.4.0",
+    "@react-native-picker/picker": "2.2.1",
     "@react-navigation/drawer": "^6.3.1",
     "@react-navigation/native": "^6.0.8",
     "@react-navigation/stack": "^6.1.1",
     "@reduxjs/toolkit": "^1.8.1",
     "axios": "^0.26.1",
-    "expo": "~44.0.0",
+    "expo": "^44.0.0",
+    "expo-cli": "^5.3.1",
     "expo-linear-gradient": "~11.0.3",
     "expo-status-bar": "~1.2.0",
     "react": "17.0.1",
